--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ng-betalabs-creditcard",
-  "version": "1.3.0",
-  "description": "angular credit card library forked from angular-cc-library to adapt to Betalabs Engine",
+  "version": "1.3.1",
+  "description": "Angular credit card library forked from angular-cc-library to adapt to Betalabs Engine",
   "main": "index.js",
   "typings": "index.d.ts",
   "scripts": {
